tests/rosetta/out/C/amb.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:38Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:38Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int amb(int wordsets, list_string res, int idx) {
  if (idx == wordsets.len) {
    return 1;
  }
  char *prev = "";
  if (idx > 0) {
    prev = res.data[idx - 1];
  }
  int i = 0;
  while (i < wordsets.data[idx].len) {
    char *w = wordsets.data[idx].data[i];
    if (idx == 0 || slice_string(prev, strlen(prev) - 1, strlen(prev)) ==
                        slice_string(w, 0, 1)) {
      res.data[idx] = w;
      if (amb(wordsets, res, idx + 1)) {
        return 1;
      }
    }
    i = i + 1;
  }
  return 0;
}

int mochi_main() {
  list_string tmp1 = list_string_create(3);
  tmp1.data[0] = "the";
  tmp1.data[1] = "that";
  tmp1.data[2] = "a";
  list_string tmp2 = list_string_create(3);
  tmp2.data[0] = "frog";
  tmp2.data[1] = "elephant";
  tmp2.data[2] = "thing";
  list_string tmp3 = list_string_create(3);
  tmp3.data[0] = "walked";
  tmp3.data[1] = "treaded";
  tmp3.data[2] = "grows";
  list_string tmp4 = list_string_create(2);
  tmp4.data[0] = "slowly";
  tmp4.data[1] = "quickly";
  list_int wordset_data[] = {tmp1, tmp2, tmp3, tmp4};
  list_list_int wordset = {4, wordset_data};
  list_string res = list_string_create(0);
  int i = 0;
  while (i < wordset.len) {
    list_string tmp5 = list_string_create(1);
    tmp5.data[0] = "";
    list_string tmp6 = concat_list_string(res, tmp5);
    res = tmp6;
    i = i + 1;
  }
  if (amb(wordset, res, 0)) {
    char *tmp7 = concat_string("[", res.data[0]);
    char *out = tmp7;
    int j = 1;
    while (j < res.len) {
      char *tmp8 = concat_string(out, " ");
      char *tmp9 = concat_string(tmp8, res.data[j]);
      out = tmp9;
      j = j + 1;
    }
    char *tmp10 = concat_string(out, "]");
    out = tmp10;
    printf("%s\n", out);
  } else {
    printf("No amb found\n");
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
